--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,10 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>VHFinder</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <!-- Google fonts (Open Sans) -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
-    <img src="logo.png" alt="">
-    <h1>VHfinder</h1>
-    <input placeholder="Find" type="text" name="" value="">
+    <header>
+      <div class="logo">
+        <img src="assets/img/logo.png" alt="">
+      </div>
+      <nav>
+        <a>
+          VHdev website
+        </a>
+        <a>
+          Sign in
+        </a>
+        <a>
+          Sign up
+        </a>
+      </nav>
+    </header>
+    <main>
+      <div class="search-chapter">
+        <h1>VHfinder</h1>
+        <input placeholder="Write your query" type="text" name="" value="">
+        <div class="buttons">
+          <div class="find-button">
+            Искать
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      VHdev @ 2021
+    </footer>
   </body>
 </html>
