--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -39,6 +39,8 @@
     <script src="./assets/js/VHMagicFramework.js"></script>
     <script>
 
+      const SERVER = 'http://127.0.0.1:5000/'
+
       let finderModule = new Module({
         template: './templates/find_page.html',
         model: {
@@ -53,7 +55,16 @@
         },
         handlers: {
           loginButton: function(model) {
-            alert(model.login)
+            VHrequest({
+              method: 'POST',
+              url: SERVER + '/sign/in',
+              data: {
+                login: model.login,
+                password: model.password
+              }
+            }).then((response) => {
+              alert(response)
+            })
           }
         }
       })
