--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -51,10 +51,12 @@
       let signinModule = new Module({
         template: './templates/sign_in.html',
         model: {
-          login: 'vh'
+          login: 'fiifi',
+          password: 'fiifi'
         },
         handlers: {
           loginButton: function(model) {
+            alert(model.login + ' ' + model.password)
             VHrequest({
               method: 'POST',
               url: SERVER + '/sign/in',
